--- a/app/eu/factorx/citizenReserve/angular/directives/mmWelcome/template.html
+++ b/app/eu/factorx/citizenReserve/angular/directives/mmWelcome/template.html
@@ -1,5 +1,5 @@
 <div>
-    <h1>Je suis la welcome directive</h1>
+    <h2 ng-bind-html="'directive.welcome.title.label' | translate "></h2>
 
     <div ng-view></div>
 </div>
