--- a/app/eu/factorx/citizenReserve/angular/directives/crDropdown/template.html
+++ b/app/eu/factorx/citizenReserve/angular/directives/crDropdown/template.html
@@ -7,7 +7,7 @@
          dropdown>
 
         <button type="button"
-                class="btn btn-primary dropdown-toggle cr-dropdown-button"
+                class="btn btn-default dropdown-toggle cr-dropdown-button"
                 dropdown-toggle
                 ng-disabled="getDisabled()">
             {{ ngModel }} <span class="caret"></span>
