--- a/app/eu/factorx/citizenReserve/angular/directives/crRange/template.html
+++ b/app/eu/factorx/citizenReserve/angular/directives/crRange/template.html
@@ -2,16 +2,6 @@
 
     <label class="cr-range-label" ng-bind-html="getLabel() | translate"></label>
 
-    <div class="input-group btn-group">
-        <input type="text" class="form-control input-sm" ng-model="ngFirst" style="width: 50px;"/>
-
-        <button ng-repeat="o in ngOptions"
-                class="btn btn-sm btn-default  cr-range-button"
-                ng-class="{'btn-danger': ngFirst == o.value, 'btn-info': ngSecond == o.value}"
-                ng-bind-html="o.label | translate"></button>
-
-        <input type="text" class="form-control input-sm" ng-model="ngSecond" style="width: 50px;"/>
-
-    </div>
+    <div range-slider min="ngRangeMin" max="ngRangeMax" model-min="ngMin" model-max="ngMax" step="ngStep" disabled="ngDisabled"></div>
 
 </div>
