--- a/app/eu/factorx/citizenReserve/angular/directives/crRadio/template.html
+++ b/app/eu/factorx/citizenReserve/angular/directives/crRadio/template.html
@@ -1,6 +1,6 @@
-<div class="cr-range">
+<div class="cr-radio">
 
-    <label class="cr-range-label" ng-bind-html="getLabel() | translate"></label>
+    <label class="cr-radio-label" ng-bind-html="getLabel() | translate"></label>
 
     <div class="btn-group" ng-hide="edit">
         <button class="btn btn-default  "
