--- a/app/eu/factorx/citizens/angular/directives/crRadio/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crRadio/template.html
@@ -7,7 +7,7 @@
                 ng-class="{active: isValue(o.value)}"
                 ng-repeat="o in computedOptions"
                 ng-click="setValue(o.value)"
-                ng-bind-html="('' + o.label) | translateText"
+                ng-bind-html="('' + o.label) | translate"
             ></button>
 
         <button ng-if="getFreeAllowed() == 'true'"
