--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -35,7 +35,7 @@
                   ng-class="{active: isValue(o)}"
                   ng-mousedown="setValue(o)"
                   style="left: {{ $index * 100 + 8}}px"
-                  ng-bind-html="('' + o.label) | translateText"
+                  ng-bind-html="('' + o.label) | translate"
                 ></span>
 
             </span>
