Fixed encoding problem

--- a/app/eu/factorx/citizens/angular/directives/crDoubleRange/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crDoubleRange/template.html
@@ -3,6 +3,7 @@
     <label class="cr-range-label" ng-bind-html="getLabel() | translate"></label>
 
 
-    <div range-slider min="ngRangeMin" max="ngRangeMax" model-min="ngMin" model-max="ngMax" step="ngStep" disabled="ngDisabled"></div>
+    <div range-slider min="ngRangeMin" max="ngRangeMax" model-min="ngMin" model-max="ngMax" step="ngStep"
+         disabled="ngDisabled"></div>
 
 </div>
