--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -9,12 +9,10 @@
         <span class="cr-slider-section"
               ng-class="{first: ($index == 1)}"
               ng-repeat="o in computedOptions"
-              ng-mousedown="setValue(o)"
               ng-if="$index > 0"
-              style="left: {{ ($index - 1 )* 100 + 8}}px"
+              style="left: {{ ($index - 1 )* 50}}px"
             >
-            <span class="cr-slider-section-line"></span>
-            </span>
+        </span>
 
 
         <!-- Ticks -->
@@ -23,7 +21,7 @@
             <span class="cr-slider-tick"
                   ng-class="{active: isValue(o), first: ($index == 0)}"
                   ng-mousedown="setValue(o)"
-                  style="left: {{ $index * 100 }}px"
+                  style="left: {{ $index * 50 }}px"
                 ></span>
 
             </span>
@@ -34,7 +32,7 @@
             <span class="cr-slider-text"
                   ng-class="{active: isValue(o)}"
                   ng-mousedown="setValue(o)"
-                  style="left: {{ $index * 100 + 8}}px"
+                  style="left: {{ $index * 50}}px"
                   ng-bind-html="('' + o.label) | translate"
                 ></span>
 
