--- a/app/eu/factorx/citizens/angular/directives/crTopic/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crTopic/template.html
@@ -1,3 +1,10 @@
-<div class="cr-topic" ng-transclude>
-
-</div>
+<button class="cr-topic" ng-click="open()">
+    <span ng-show="getActive() == 'true'"
+          class="cr-topic-image-active"
+          ng-attr-style="background-image: url('{{ getActiveImage() }}')"></span>
+    <span ng-hide="getActive() == 'true'"
+          class="cr-topic-image-inactive"
+          ng-attr-style="background-image: url('{{ getInactiveImage() }}')"></span>
+    <span class="cr-topic-image-hover"
+          ng-attr-style="background-image: url('{{ getHoverImage() }}')"></span>
+</button>
