--- a/app/eu/factorx/citizens/angular/directives/crBoolean/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crBoolean/template.html
@@ -1,1 +1,1 @@
-<cr-slider label="{{ getLabel() }}" ng-model="ngModel" ng-steps="steps"></cr-slider>
+<cr-slider ng-model="ngModel" ng-steps="steps"></cr-slider>
