--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -21,9 +21,7 @@
 
             <!-- Sections -->
             <span class="cr-slider-section"
-                  ng-repeat="o in computedOptions"
-                  ng-if="$index > 1"
-                  style="left: {{ ($index - 2 )* 50}}px"
+                  style="left: 0px; width: {{ (computedOptions.length-2) * 50.0 }}px"
                 >
             </span>
 
@@ -75,9 +73,7 @@
 
             <!-- Sections -->
             <span class="cr-slider-section"
-                  ng-repeat="o in computedOptions"
-                  ng-if="$index > 1"
-                  style="top: {{ ($index - 2 )* 50}}px"
+                  style="top: 0px; height: {{ (computedOptionsFiltered.length-2) * 50.0 }}px"
                 >
             </span>
 
@@ -132,9 +128,7 @@
 
             <!-- Sections -->
             <span class="cr-slider-section"
-                  ng-repeat="o in computedOptionsFiltered"
-                  ng-if="$index > 1"
-                  style="top: {{ ($index - 2 )* 50}}px"
+                  style="top: 0px; height: {{ (computedOptionsFiltered.length-2) * 50.0 }}px"
                 >
             </span>
 
@@ -142,7 +136,7 @@
 
             <span class="cr-slider-tick"
                   ng-repeat="o in computedOptionsFiltered"
-                  ng-if="o.value != null"
+                  ng-show="o.value != null"
                   ng-class="{active: isValue(o), first: ($index == 0)}"
                   ng-mousedown="setValue(o)"
                   style="top: {{ ($index - 1) * 50 }}px"
@@ -153,12 +147,18 @@
 
             <span class="cr-slider-text"
                   ng-repeat="o in computedOptionsFiltered"
-                  ng-if="o.label != null"
+                  ng-show="o.label != null"
                   ng-class="{active: isValue(o)}"
                   ng-mousedown="setValue(o)"
                   style="top: {{ ($index - 1 )* 50}}px"
                   ng-bind-html="labelFilter('' + o.label)"
                 ></span>
+
+            <span class="cr-slider-text"
+                  ng-hide="expanded"
+                  ng-mousedown="toggleExpanded()"
+                  style="top: {{ (computedOptionsFiltered.length - 2 )* 50}}px"
+                >...</span>
 
 
         </div>
