--- a/app/eu/factorx/citizens/angular/directives/crQuestion/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crQuestion/template.html
@@ -1,10 +1,12 @@
 <div class="cr-question">
 
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-12">
             <label class="cr-question-label" ng-bind-html="getLabel() | translate"></label>
         </div>
-        <div class="col-md-10">
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="cr-question-editor" ng-transclude></div>
         </div>
     </div>
