--- a/app/eu/factorx/citizens/angular/directives/crTopic/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crTopic/template.html
@@ -1,4 +1,4 @@
-<button class="cr-topic" ng-class="{active: getActive() == 'true'}" ng-click="open()">
+<button class="cr-topic {{ getWindowClass() }}" ng-class="{active: getActive() == 'true'}" ng-click="open()" >
 
     <img class="cr-topic-image-active"
          ng-src="/assets/images/{{getImage()}}_active.png"/>
@@ -8,4 +8,6 @@
 
     <img class="cr-topic-image-hover"
          ng-src="/assets/images/{{getImage()}}_hover.png"/>
+
+    <p class="cr-topic-text " ng-bind-html="getLabel() | translate"></p>
 </button>
