--- a/app/eu/factorx/citizens/angular/directives/crTopic/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crTopic/template.html
@@ -9,5 +9,5 @@
     <img class="cr-topic-image-hover"
          ng-src="/assets/images/{{getImage()}}_hover.png"/>
 
-    <p class="cr-topic-text " ng-bind-html="getLabel() | translate"></p>
+    <div class="cr-topic-text " ng-bind-html="getLabel() | translate"></div>
 </button>
