--- a/app/eu/factorx/citizens/angular/directives/crText/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crText/template.html
@@ -1,14 +1,15 @@
-<div class="cr-text">
+<div class="cr-text" ng-switch="getMultiline() == 'true'">
+
+    <textarea
+        ng-switch-when="true"
+        ng-attr-name="{{ getName() }}"
+        class="form-control cr-text-textarea"
+        ng-model="ngModel"></textarea>
 
     <input
-        ng-show="getMultiline() != 'true'"
+        ng-switch-default
         ng-attr-name="{{ getName() }}"
         class="form-control cr-text-input"
         ng-model="ngModel"/>
-
-    <textarea ng-show="getMultiline() == 'true'"
-              ng-attr-name="{{ getName() }}"
-              class="form-control cr-text-textarea"
-              ng-model="ngModel"></textarea>
 
 </div>
