--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -4,7 +4,6 @@
 
         <!-- Sections -->
             <span class="cr-slider-section first"
-                  ng-repeat="o in computedOptions"
                   style="left: 0px"
                 >
             </span>
@@ -19,35 +18,34 @@
 
         <div class="cr-slider-not-null-box">
 
-            <!-- Sections -->
-            <span class="cr-slider-section"
-                  style="left: 0px; width: {{ (computedOptions.length-2) * 50.0 }}px"
-                >
-            </span>
+            <div class="cr-slider-not-null-box-holder">
+                <!-- Sections -->
+                <span class="cr-slider-section"
+                      style="left: 0px; width: {{ (computedOptions.length-2) * 50.0 }}px"
+                    >
+                </span>
 
-            <!-- Ticks -->
-
-            <span class="cr-slider-tick"
-                  ng-repeat="o in computedOptions"
-                  ng-if="o.value != null"
-                  ng-class="{active: isValue(o), first: ($index == 0)}"
-                  ng-mousedown="setValue(o)"
-                  style="left: {{ ($index - 1) * 50 }}px"
-                ></span>
-
-
-            <!-- Labels -->
-
-            <span class="cr-slider-text"
-                  ng-repeat="o in computedOptions"
-                  ng-if="o.label != null"
-                  ng-class="{active: isValue(o)}"
-                  ng-mousedown="setValue(o)"
-                  style="left: {{ ($index - 1 )* 50}}px"
-                  ng-bind-html="labelFilter('' + o.label)"
-                ></span>
+                <!-- Ticks -->
+                <span class="cr-slider-tick"
+                      ng-repeat="o in computedOptions"
+                      ng-if="o.value != null"
+                      ng-class="{active: isValue(o), first: ($index == 0)}"
+                      ng-mousedown="setValue(o)"
+                      style="left: {{ ($index - 1) * 50 }}px"
+                    ></span>
 
 
+                <!-- Labels -->
+                <span class="cr-slider-text"
+                      ng-repeat="o in computedOptions"
+                      ng-if="o.label != null"
+                      ng-class="{active: isValue(o)}"
+                      ng-mousedown="setValue(o)"
+                      style="left: {{ ($index - 1 )* 50}}px"
+                      ng-bind-html="labelFilter('' + o.label)"
+                    ></span>
+
+            </div>
         </div>
     </div>
 
