--- a/app/eu/factorx/citizens/angular/directives/crTopic/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crTopic/template.html
@@ -1,10 +1,15 @@
-<button class="cr-topic {{ getWindowClass() }}" ng-class="{active: (getActive() == 'true')}" ng-click="open()" >
+<button class="cr-topic {{ getWindowClass() }}"
+        ng-class="{active: (getActive() == 'true'), disabled: (getDisabled() == 'true')}"
+        ng-click="open()" >
 
     <img class="cr-topic-image-active"
          ng-src="/assets/images/{{getImage()}}_active.png"/>
 
     <img class="cr-topic-image-inactive"
          ng-src="/assets/images/{{getImage()}}_inactive.png"/>
+
+    <img class="cr-topic-image-disabled"
+         ng-src="/assets/images/{{getImage()}}_disabled.png"/>
 
     <img class="cr-topic-image-hover"
          ng-src="/assets/images/{{getImage()}}_hover.png"/>
