--- a/app/eu/factorx/citizens/angular/directives/crLogin/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crLogin/template.html
@@ -1,13 +1,15 @@
-<div class="pull-right">
+<div class="cr-login pull-right">
 
 
     <a ui-sref="root.householdAccount"
+       class="cr-login-link"
        ng-if="isAuthenticated()">
         <i class="fa fa-user"></i>
         <span>{{ $parent.fullname() }}</span>
     </a>
 
     <a ng-click="logout()"
+       class="cr-login-link"
        ng-if="isAuthenticated()">
         <i class="fa fa-sign-out"></i>
         <span>Logout</span>
