--- a/app/eu/factorx/citizens/angular/directives/crLogin/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crLogin/template.html
@@ -12,6 +12,6 @@
        class="cr-login-link"
        ng-if="isAuthenticated()">
         <i class="fa fa-sign-out"></i>
-        <span>Logout</span>
+        <span ng-bind-html="'logout' | translate"></span>
     </a>
 </div>
