--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -4,14 +4,14 @@
 
         <!-- Sections -->
             <span class="cr-slider-section first"
-                  style="left: 0px"
+                  ng-style="{left: 0px}"
                 >
             </span>
 
         <div class="cr-slider-null-box">
               <span class="cr-slider-tick first"
                     ng-mousedown="setValue(computedOptions[0])"
-                    style="left: 0px"
+                    ng-style="{left: 0}"
                   ></span>
 
         </div>
@@ -21,7 +21,7 @@
             <div class="cr-slider-not-null-box-holder">
                 <!-- Sections -->
                 <span class="cr-slider-section"
-                      style="left: 0px; width: {{ (computedOptions.length-2) * 50.0 }}px"
+                      ng-style="{left: 0, width: ((computedOptions.length-2) * 50.0) + 'px'}"
                     >
                 </span>
 
@@ -31,7 +31,7 @@
                       ng-if="o.value != null"
                       ng-class="{active: isValue(o), first: ($index == 0)}"
                       ng-mousedown="setValue(o)"
-                      style="left: {{ ($index - 1) * 50 }}px"
+                      ng-style="{left: (($index - 1) * 50) + 'px'}"
                     ></span>
 
 
@@ -41,7 +41,7 @@
                       ng-if="o.label != null"
                       ng-class="{active: isValue(o)}"
                       ng-mousedown="setValue(o)"
-                      style="left: {{ ($index - 1 )* 50}}px"
+                      ng-style="{left: (($index - 1 )* 50) + 'px'}"
                       ng-bind-html="labelFilter('' + o.label)"
                     ></span>
 
@@ -50,29 +50,29 @@
     </div>
 
     <div class="cr-slider-container-vertical" ng-if="getVertical()"
-         style="height: {{ computedOptions.length * 50.0 }}px" ng-show="computedOptions.length <= 3">
+         ng-style="{height: (computedOptions.length * 50.0) + 'px'}" ng-show="computedOptions.length <= 3">
 
 
         <!-- Sections -->
             <span class="cr-slider-section first"
                   ng-repeat="o in computedOptions"
-                  style="left: 0px"
+                  ng-style="{left: 0}"
                 >
             </span>
 
         <div class="cr-slider-null-box">
               <span class="cr-slider-tick first"
                     ng-mousedown="setValue(computedOptions[0])"
-                    style="left: 0px"
+                    ng-style="{left: 0}"
                   ></span>
 
         </div>
 
-        <div class="cr-slider-not-null-box" style="height: {{ computedOptions.length * 50.0 }}px">
+        <div class="cr-slider-not-null-box" ng-style="{height: (computedOptions.length * 50.0) + 'px'"}>
 
             <!-- Sections -->
             <span class="cr-slider-section"
-                  style="top: 0px; height: {{ (computedOptionsFiltered.length-2) * 50.0 }}px"
+                  ng-style="{top: 0, height: ((computedOptionsFiltered.length-2) * 50.0) + 'px'}"
                 >
             </span>
 
@@ -83,7 +83,7 @@
                   ng-if="o.value != null"
                   ng-class="{active: isValue(o), first: ($index == 0)}"
                   ng-mousedown="setValue(o)"
-                  style="top: {{ ($index - 1) * 50 }}px"
+                  ng-style="{top: (($index - 1) * 50) + 'px'}"
                 ></span>
 
 
@@ -94,7 +94,7 @@
                   ng-if="o.label != null"
                   ng-class="{active: isValue(o)}"
                   ng-mousedown="setValue(o)"
-                  style="top: {{ ($index - 1 )* 50}}px"
+                  ng-style="{top: (($index - 1 )* 50) + 'px'}"
                   ng-bind-html="labelFilter('' + o.label)"
                 ></span>
 
@@ -104,30 +104,30 @@
 
 
     <div class="cr-slider-container-vertical" ng-if="getVertical() == 'true'"
-         style="height: {{ computedOptionsFiltered.length * 50.0 }}px" ng-hide="computedOptions.length <= 3">
+         ng-style="{height: (computedOptionsFiltered.length * 50.0) + 'px'}" ng-hide="computedOptions.length <= 3">
 
 
         <!-- Sections -->
             <span class="cr-slider-section first"
                   ng-repeat="o in computedOptionsFiltered"
-                  style="left: 0px"
+                  ng-style="{left: 0}"
                 >
             </span>
 
         <div class="cr-slider-null-box">
               <span class="cr-slider-tick first"
                     ng-mousedown="setValue(computedOptionsFiltered[0])"
-                    style="left: 0px"
+                    ng-style="{left: 0}"
                   ></span>
 
         </div>
 
-        <div class="cr-slider-not-null-box" style="height: {{ computedOptionsFiltered.length * 50.0 }}px">
+        <div class="cr-slider-not-null-box" ng-style="{height: (computedOptionsFiltered.length * 50.0) + 'px'}">
 
 
             <!-- Sections -->
             <span class="cr-slider-section"
-                  style="top: 0px; height: {{ (computedOptionsFiltered.length-2) * 50.0 }}px"
+                  ng-style="{top: 0, height: ((computedOptionsFiltered.length-2) * 50.0) + 'px'}"
                 >
             </span>
 
@@ -138,7 +138,7 @@
                   ng-show="o.value != null"
                   ng-class="{active: isValue(o), first: ($index == 0)}"
                   ng-mousedown="setValue(o)"
-                  style="top: {{ ($index - 1) * 50 }}px"
+                  ng-style="{top: (($index - 1) * 50) + 'px'}"
                 ></span>
 
 
@@ -149,14 +149,14 @@
                   ng-show="o.label != null"
                   ng-class="{active: isValue(o)}"
                   ng-mousedown="setValue(o)"
-                  style="top: {{ ($index - 1 )* 50}}px"
+                  ng-style="{top: (($index - 1 )* 50) + 'px'}"
                   ng-bind-html="labelFilter('' + o.label)"
                 ></span>
 
             <span class="cr-slider-text"
                   ng-hide="expanded"
                   ng-mousedown="toggleExpanded()"
-                  style="top: {{ (computedOptionsFiltered.length - 2 )* 50}}px"
+                  ng-style="{top: ((computedOptionsFiltered.length - 2 )* 50) + 'px'}"
                 >...</span>
 
 
