--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -4,7 +4,7 @@
 
         <!-- Sections -->
             <span class="cr-slider-section first"
-                  ng-style="{left: 0px}"
+                  ng-style="{left: 0}"
                 >
             </span>
 
