--- a/app/eu/factorx/citizens/angular/directives/crSlider/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crSlider/template.html
@@ -68,7 +68,7 @@
 
         </div>
 
-        <div class="cr-slider-not-null-box" ng-style="{height: (computedOptions.length * 50.0) + 'px'"}>
+        <div class="cr-slider-not-null-box" ng-style="{height: (computedOptions.length * 50.0) + 'px'}"}>
 
             <!-- Sections -->
             <span class="cr-slider-section"
