cr-login revision - Tx Gaetan.

--- a/app/eu/factorx/citizens/angular/directives/crLogin/template.html
+++ b/app/eu/factorx/citizens/angular/directives/crLogin/template.html
@@ -1,7 +1,7 @@
 <div class="cr-login pull-right">
 
 
-    <a ui-sref="root.householdAccount"
+    <a ng-click="toAccount()"
        class="cr-login-link"
        ng-if="isAuthenticated()">
         <i class="fa fa-user"></i>
